# rtems-docs

user/bsps/: xilinx-zynq.rst
user/bsps/arm/: xilinx-zynq.rst
user/bsps/arm/supplement/xilinx-zynq/app/cmake/: rtems.spec.in  toolchain.cmake.in
user/bsps/arm/supplement/xilinx-zynq/app/dbg/: picozed_jlink.cfg  pynq.cfg  reset_target.jlink
user/bsps/arm/supplement/xilinx-zynq/app/src/: CMakeLists.txt
user/bsps/arm/supplement/xilinx-zynq/app/src/main/: main.cpp  mmu.c  pre_main.c
user/bsps/arm/supplement/xilinx-zynq/scripts/: build_boot_file.sh  build_fsbl.sh  build_hardware.sh  build_rtems_and_libbsd.sh  config.sh  create_toolchain_file.sh  create_vs_code_folder.sh  install_tools.sh
user/bsps/arm/supplement/xilinx-zynq/vscode_template/: launch.json  tasks.json
